syntax = "proto3";

option java_package = "wook.example.protodatastorestudy";
option java_multiple_files = true;

message UserSettings {

  enum BgColor {
    COLOR_WHITE = 0;
    COLOR_BLACK = 1;
  }

  BgColor bgColor = 1;
  string colorText = 2;

}